--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    <h1>Angela Yu's Portfolio</h1>
+    <h2>I'm Web Developer</h2>
+    <hr/>
+<a href="public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+<img src = "assets/images/movie-ranking.png" height = 200>
+<a href = "public/birthday-invite.html"><h3>Birthday invite Project</h3></a>
+<img src = "assets/images/birthday-invite.png" height="200">
+<a href= "public/webpage.html"><h3>webpage</h3></a>
+<img src= "assets/images/wepsite.png" height = "200">
+<p>
+    <a href= "public/about.html">about</a>
+    <a href= "public/contact.html">Contact Me</a>
+</p>
 
+
+
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
